# OsuRequestFlow

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
helpers/: main.cpp
src/: api_request_handler.h  auth_data.cpp  auth_data.h  ca_sertificates_loader.cpp  ca_sertificates_loader.h  chat_bot.h  client.cpp  client.h  command.h  command_executor.cpp  command_executor.h  command_parser.cpp  command_parser.h  connection.cpp  connection.h  connection_pool.h  core.cpp  core.h  decode_url.h  domain.h  domain_fields.h  downloader.cpp  downloader.h  file_manager.cpp  file_manager.h  file_request_handler.h  http_client.h  http_server.h  irc.cpp  irc.h  irc_client.cpp  irc_client.h  logging.cpp  logging.h  main.cpp  message.cpp  message.h  message_handler.cpp  message_handler.h  message_processor.cpp  (+17 more)
src/chat_bot/: chat_bot.cpp  chat_bot.h  command.cpp  command.h  command_executor.h  user_validator.cpp  user_validator.h
src/connection/: connection.cpp  connection.h
src/core/: core.cpp  core.h
src/downloader/: downloader.cpp  downloader.h
src/gui/: api_request_handler.h  file_request_handler.h  main.cpp  request_handler.h  response_maker.cpp  response_maker.h
src/http_client/: connection_pool.h  http_client.h  random_user_agent.cpp  request_builder.cpp  request_builder.h  response_parser.h
src/http_server/: http_server.cpp  http_server.h  root_directory.cpp  root_directory.h  tcp_listener.h
src/osu_file_manager/: osu_file_manager.cpp  osu_file_manager.h
src/twitch_irc_client/: irc_client.cpp  irc_client.h  message_handler.h  message_processor.h
src/websocket_server/: websoc_server.h
static/: chat.html  index.html  package-lock.json  package.json  quick-setup.html  settings.html  test.html
static/src/: App.vue
static/src/api/: client.js  endpoints.js
static/src/assets/font/: style.css
static/src/assets/styles/: main.scss
static/src/components/: Directory.vue  JoinChannel.vue  Loader.vue  SetupWizard.vue  UserManage.vue
static/src/components/StartSettings/: AccessLevel.vue  Directory.vue  JoinChannel.vue
static/src/context/: data.js
tests/: main.cpp  test_message_processor.h  utils.h
tests/badges_parser/: main.cpp  test_badges_parser.h
tests/command_parser/: main.cpp  test_command_parser.h
tests/downloader/: main.cpp  test_downloader.h
tests/file_manager/: main.cpp  test_file_manager.h
tests/http_client/: main.cpp  test_http_client.h
tests/message_processor/: main.cpp  test_message_processor.h
tests/twitch_irc_client/: main.cpp
tests/verificator/: main.cpp
